	12111,Wrapped_Food: gets 3 of any food<- food or mixed food? Need to know so it can be implemented. [Skotlex]
	4198,Maya_Purple_Card: intravision not working atm
	4296,Cramp_Card: Temporal Plug: 10z per mob-level on a 3% chance.
	1771,Venom_Knife: For new Asassins skill
		Item type: Throwing Dagger. Has to be equipped as an arrow, is consumed
		like gemstones when the skill is used.
	--

10/19
	* Double bug fix: 4303,Whisper_Boss_Card [Lupus]
	- Fixed wrong Poki's card desc.. and found.. that we weren't adding 3% MaxHP... but +3
	* Added new item. Thanks to Landarma. And Fixed an old item stat. [Nexon]
	* Added a few more loot sell prices to the einbroch items [MasterOfMuppets] 
	* Corrected NPC_STOP, it should have at least range 1 (currently range 8
	  for lack of better info) and inf should be 1 (attack skill) not 4
	  (used on self). Also changed it's time to 10secs as 2sec is really too
	  low. [Skotlex]
	* Fixed constants for Karma and Manner in db/const.txt, thanks to orn. [Skotlex]
10/18
	* More translations for japanese comments, again thanks to sighel. [MasterOfMuppets]
	* Updated Thanatos' mode to include boss-type (Thanatos and several of the
	  mobs in the same dungeon are supposed to be looters? That's what I read
	  from here). [Skotlex]
	* Changed DEF of Guard to 3, according to Komurka and andz report
	  [Foruken]

10/17
	* Re-fixed Gravition's range to 8. [Skotlex]
	* Some mob skill updates regarding the advanced classes in Lighthalzen. [Skotlex]
	- Removed Sanctuary from Magaleta, removed advanced skills from mobs.
	- Raised Frost Diver's rate for Katrinn, reduced rate of Sight Trasher.
	* Updated the item_db to use BaseClass comparisons rather than those
	  callfunc("is class") functions. [Skotlex]
	* Updated some items so that Atk and Matk potions specify their duration in
	  ms rather than seconds (standarizes with all other sc_start items) [Skotlex]
	* Added translations for japanese comments, thanks to sighel. [MasterOfMuppets]