@@ -2592,8 +2592,9 @@
 1637,MAGALETA@AL_DECAGI,chase,30,10,2000,0,60000,no,target,always,0,,,,,,29
 1637,MAGALETA@NPC_HOLYATTACK,attact,189,1,500,800,5000,yes,target,always,0,,,,,,
 1637,MAGALETA@MG_SAFETYWALL,attack,12,5,1000,1000,5000,no,self,always,0,,,,,,18
-1637,MAGALETA@AL_HEAL,chase,28,1,10000,500,5000,no,self,myhpltmaxrate,30,,,,,,18
-1637,MAGALETA@AL_HEAL,attack,28,1,10000,500,5000,no,self,myhpltmaxrate,30,,,,,,18
+1637,MAGALETA@AL_HEAL,chase,28,5,10000,500,5000,no,self,myhpltmaxrate,30,,,,,,18
+1637,MAGALETA@AL_HEAL,attack,28,8,10000,500,5000,no,self,myhpltmaxrate,30,,,,,,18
+1637,MAGALETA@AL_HEAL,any,28,10,10000,500,5000,no,friend,friendhpltmaxrate,60,,,,,,18
 1637,MAGALETA@AL_HOLYLIGHT,chase,156,1,500,800,5000,yes,target,always,0,,,,,,
 //1637,MAGALETA@PR_SANCTUARY,attack,70,10,10000,500,30000,no,self,always,0,,,,,,18
 //1637,MAGALETA@PR_SANCTUARY,chase,70,10,10000,500,30000,no,self,always,0,,,,,,18
@@ -2670,6 +2671,7 @@
 1643,G_MAGALETA@MG_SAFETYWALL,attack,12,5,1000,1000,5000,no,self,always,0,,,,,,18
 1643,G_MAGALETA@AL_HEAL,chase,28,5,10000,500,5000,no,self,myhpltmaxrate,30,,,,,,18
 1643,G_MAGALETA@AL_HEAL,attack,28,8,10000,500,5000,no,self,myhpltmaxrate,30,,,,,,18
+1643,G_MAGALETA@AL_HEAL,any,28,10,10000,500,5000,no,friend,friendhpltmaxrate,60,,,,,,18
 
 1644,G_SHECIL@AC_DOUBLE,attack,46,10,500,1000,5000,no,target,always,0,,,,,,
 1644,G_SHECIL@AC_SHOWER,attack,47,8,2000,1000,5000,no,target,attackpcgt,2,,,,,,
@@ -2754,6 +2756,7 @@
 1649,L_MAGALETA@MG_SAFETYWALL,attack,12,5,1000,1000,5000,no,self,always,0,,,,,,18
 1649,L_MAGALETA@AL_HEAL,chase,28,5,10000,500,5000,no,self,myhpltmaxrate,30,,,,,,18
 1649,L_MAGALETA@AL_HEAL,attack,28,8,10000,500,5000,no,self,myhpltmaxrate,30,,,,,,18
+1649,L_MAGALETA@AL_HEAL,any,28,10,10000,500,5000,no,friend,friendhpltmaxrate,60,,,,,,18
 1649,L_MAGALETA@NPC_SUMMONSLAVE,idle,196,5,10000,2000,240000,no,self,slavele,1,1640,1641,1642,1644,1645,0
 1649,L_MAGALETA@NPC_CALLSLAVE,attack,352,1,2000,0,10000,yes,target,always,0,,,,,,
 1649,L_MAGALETA@NPC_CALLSLAVE,idle,352,1,2000,0,10000,yes,self,always,0,,,,,,
